[Feat] Close modal on outside click

--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
       <strong>Recycle Bin</strong>
     </div>
     <!-- modal -->
-    <div class="window" style="width: 300px">
-      <div class="title-bar">
-        <div class="title-bar-text">Window 98</div>
-        <div class="title-bar-controls">
-          <button aria-label="Minimize"></button>
-          <button aria-label="Maximize"></button>
-          <button aria-label="Close" class="js-close"></button>
+    <div class="window-container">
+      <div class="window">
+        <div class="title-bar">
+          <div class="title-bar-text">Window 98</div>
+          <div class="title-bar-controls">
+            <button aria-label="Minimize"></button>
+            <button aria-label="Maximize"></button>
+            <button aria-label="Close" class="js-close"></button>
+          </div>
         </div>
-      </div>
-      <div class="window-body">
-        <p>Not supported yet!</p>
+        <div class="window-body">
+          <p>Not supported yet!</p>
+        </div>
       </div>
     </div>
     <!-- taskbar -->
