--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
     <link rel="stylesheet" href="./style/index.css" />
     <link rel="stylesheet" href="./style/modal.css" />
+    <link rel="stylesheet" href="./style/todo.css" />
   </head>
   <body>
     <!-- icon menus -->
@@ -24,8 +25,11 @@
     <div class="icon">
       <strong>Recycle Bin</strong>
     </div>
+    <div class="todo-icon">
+      <strong>ToDo List</strong>
+    </div>
     <!-- modal -->
-    <div class="window-container">
+    <div class="modal-container">
       <div class="window">
         <div class="title-bar">
           <div class="title-bar-text">Window 98</div>
@@ -40,6 +44,33 @@
         </div>
       </div>
     </div>
+
+    <!-- todos -->
+    <div class="todo-container">
+      <div class="window">
+        <div class="title-bar">
+          <div class="title-bar-text">ToDo List</div>
+          <div class="title-bar-controls">
+            <button aria-label="Minimize"></button>
+            <button aria-label="Maximize"></button>
+            <button aria-label="Close" class="js-close_todo"></button>
+          </div>
+        </div>
+        <div class="window-body">
+          <div class="field-row todo-input-container">
+            <label for="todo-input">Todo</label>
+            <input type="text" id="todo-input" />
+          </div>
+          <ul class="todo-lists">
+            <li class="field-row todo-list todo-example">
+              <input type="checkbox" id="todo" />
+              <label for="todo">(ex) Write down Todos</label>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <!-- taskbar -->
     <div id="taskbar">
       <button>
@@ -59,5 +90,6 @@
     <script src="./index.js"></script>
     <script src="./script/clock.js"></script>
     <script src="./script/modal.js"></script>
+    <script src="./script/todo.js"></script>
   </body>
 </html>
