[Fix] Fix typeerror in todo.js, [Feat] Add startup win98 image

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     <div class="todo-icon">
       <strong>ToDo List</strong>
     </div>
+
+    <!-- startup -->
+    <div class="startup">
+      <img
+        src="https://guidebookgallery.org/pics/gui/startupshutdown/splash/win98-1-1.png"
+        alt="Window 98 Startup"
+      />
+    </div>
+
     <!-- modal -->
     <div class="modal-container">
       <div class="window">
