[Feat] Add Taskbar-running-app(작업표시줄 실행중인 앱 표시)

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       <button>
         <div>Welcome to Windows 98</div>
       </button>
+      <div class="taskbar-running-app"></div>
       <!-- clock -->
       <button id="date-time">
         <div class="js-clock">
