[Feat] Add Text Editor using iframe &  execCommand

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="./style/index.css" />
     <link rel="stylesheet" href="./style/modal.css" />
     <link rel="stylesheet" href="./style/todo.css" />
+    <link rel="stylesheet" href="./style/texteditor.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- icon menus -->
@@ -25,23 +32,26 @@
     <div class="icon">
       <strong>Recycle Bin</strong>
     </div>
-    <div class="todo-icon">
+    <div id="todo" class="icon todo">
       <strong>ToDo List</strong>
+    </div>
+    <div id="editor" class="icon editor">
+      <strong>Text Editor</strong>
     </div>
 
     <!-- startup -->
-    <div class="startup">
+    <!-- <div class="startup">
       <img
         src="https://guidebookgallery.org/pics/gui/startupshutdown/splash/win98-1-1.png"
         alt="Window 98 Startup"
       />
-    </div>
+    </div> -->
 
     <!-- modal -->
-    <div class="modal-container">
+    <section class="modal-container">
       <div class="window">
         <div class="title-bar">
-          <div class="title-bar-text">Window 98</div>
+          <div class="title-bar-text" aria-label="Window Modal">Window 98</div>
           <div class="title-bar-controls">
             <button aria-label="Minimize"></button>
             <button aria-label="Maximize"></button>
@@ -52,13 +62,13 @@
           <p>Not supported yet!</p>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- todos -->
-    <div class="todo-container">
+    <section class="todo-container">
       <div class="window">
         <div class="title-bar">
-          <div class="title-bar-text">ToDo List</div>
+          <div class="title-bar-text" aria-label="Todo List">ToDo List</div>
           <div class="title-bar-controls">
             <button aria-label="Minimize"></button>
             <button aria-label="Maximize"></button>
@@ -78,7 +88,85 @@
           </ul>
         </div>
       </div>
-    </div>
+    </section>
+
+    <!-- text editor -->
+    <section class="editor-container">
+      <div class="window editor">
+        <div class="title-bar">
+          <div class="title-bar-text" aria-label="Text Editor">
+            Script - WordPad
+          </div>
+          <div class="title-bar-controls">
+            <button aria-label="Minimize"></button>
+            <button aria-label="Maximize"></button>
+            <button aria-label="Close" class="js-close_editor"></button>
+          </div>
+        </div>
+        <div class="window-body">
+          <ul class="lists header-menu">
+            <li>File</li>
+            <li>Edit</li>
+            <li>View</li>
+            <li>Insert</li>
+            <li>Format</li>
+            <li>Help</li>
+          </ul>
+          <hr />
+          <ul class="lists editor-menu">
+            <div class="button-group">
+              <select data-cmd="fontName">
+                <option value="Arial">Arial</option>
+                <option value="Courier">Courier</option>
+                <option value="Georgia">Georgia</option>
+                <option value="Tahoma">Tahoma</option>
+                <option value="Verdana">Verdana</option>
+                <option value="Helvetica Neue">Helvetica Neue</option>
+                <option value="Times New Roman">Times New Roman</option>
+              </select>
+            </div>
+            <div class="button-group">
+              <select data-cmd="fontSize">
+                <option value="1">h1</option>
+                <option value="2">h2</option>
+                <option value="3">h3</option>
+                <option value="4">h4</option>
+                <option value="5">h5</option>
+                <option value="6">h6</option>
+                <option value="7">h7</option>
+              </select>
+            </div>
+            <div class="button-group">
+              <button aria-label="bold" data-cmd="bold">
+                <i class="fas fa-bold"></i>
+              </button>
+              <button aria-label="italic" data-cmd="italic">
+                <i class="fas fa-italic"></i>
+              </button>
+              <button aria-label="underline" data-cmd="underline">
+                <i class="fas fa-underline"></i>
+              </button>
+              <button aria-label="strikeThrough" data-cmd="strikeThrough">
+                <i class="fas fa-strikethrough"></i>
+              </button>
+            </div>
+            <div class="button-group">
+              <button aria-label="align left" data-cmd="justifyLeft">
+                <i class="fas fa-align-left"></i>
+              </button>
+              <button aria-label="align center" data-cmd="justifyCenter">
+                <i class="fas fa-align-center"></i>
+              </button>
+              <button aria-label="align right" data-cmd="justifyRight">
+                <i class="fas fa-align-right"></i>
+              </button>
+            </div>
+          </ul>
+          <hr />
+          <iframe id="text-field"></iframe>
+        </div>
+      </div>
+    </section>
 
     <!-- taskbar -->
     <div id="taskbar">
@@ -101,5 +189,6 @@
     <script src="./script/clock.js"></script>
     <script src="./script/modal.js"></script>
     <script src="./script/todo.js"></script>
+    <script src="./script/texteditor.js"></script>
   </body>
 </html>
