[Feat] Add erase & eraseAll to painting app

--- a/index.html
+++ b/index.html
@@ -215,11 +215,17 @@
               <button aria-label="line">
                 <i class="fas fa-signature"></i>
               </button>
+              <button aria-label="eraser" class="paint-eraser">
+                <i class="fas fa-eraser"></i>
+              </button>
               <button aria-label="rectangle">
                 <i class="far fa-square"></i>
               </button>
               <button aria-label="circle">
                 <i class="far fa-circle"></i>
+              </button>
+              <button aria-label="erase all" class="paint-eraseAll">
+                <i class="fas fa-redo"></i>
               </button>
             </div>
             <canvas
