[Feat] Add tabindex & enter event to app icons

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <div class="icon">
         <strong>Recycle Bin</strong>
       </div>
-      <div id="todo" class="icon todo">
+      <div id="todo" class="icon todo" tabindex="0">
         <strong>ToDo List</strong>
       </div>
-      <div id="editor" class="icon editor">
+      <div id="editor" class="icon editor" tabindex="0">
         <strong>Text Editor</strong>
       </div>
-      <div id="paint" class="icon paint">
+      <div id="paint" class="icon paint" tabindex="0">
         <strong>Paint</strong>
       </div>
     </div>
