[Feat] Add draw rectangle to painting app

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
               <button aria-label="eraser" class="paint-eraser">
                 <i class="fas fa-eraser"></i>
               </button>
-              <button aria-label="rectangle">
+              <button aria-label="rectangle" class="tool rectangle">
                 <i class="far fa-square"></i>
               </button>
-              <button aria-label="circle">
+              <button aria-label="circle" class="tool circle">
                 <i class="far fa-circle"></i>
               </button>
               <button aria-label="erase all" class="paint-eraseAll">
@@ -285,5 +285,6 @@
     <script src="./script/todo.js"></script>
     <script src="./script/texteditor.js"></script>
     <script src="./script/paint.js"></script>
+    <script src="./script/paint-tools.js"></script>
   </body>
 </html>
