[Style] Add tools styling to painting app

--- a/index.html
+++ b/index.html
@@ -189,7 +189,17 @@
           </div>
         </div>
         <div class="window-body">
+          <ul class="lists header-menu">
+            <li>File</li>
+            <li>Edit</li>
+            <li>View</li>
+            <li>Image</li>
+            <li>Options</li>
+            <li>Help</li>
+          </ul>
+          <hr />
           <div class="field-row">
+            <div id="paint-tools" class="tools"></div>
             <canvas id="paint-canvas" class="canvas"></canvas>
           </div>
           <div id="paint-colors" class="field-row colors"></div>
