⚡️ Add startup (loading)

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       </div>
     </div>
     <!-- startup -->
-    <!-- <div class="startup">
+    <div class="startup">
       <img
         src="https://guidebookgallery.org/pics/gui/startupshutdown/splash/win98-1-1.png"
         alt="Window 98 Startup"
       />
-    </div> -->
+    </div>
 
     <!-- modal -->
     <section
