♻️ Create web component

--- a/index.html
+++ b/index.html
@@ -8,287 +8,10 @@
     <link rel="shortcut icon" href="./assets/windows.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
     <link rel="stylesheet" href="./style/index.css" />
-    <link rel="stylesheet" href="./style/modal.css" />
-    <link rel="stylesheet" href="./style/todo.css" />
-    <link rel="stylesheet" href="./style/texteditor.css" />
-    <!-- <link rel="stylesheet" href="./style/paint.css" /> -->
-    <link rel="stylesheet" href="./style/paint-new.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
-      crossorigin="anonymous"
-    />
+    <!-- <link rel="stylesheet" href="./style/todo.css" /> -->
   </head>
   <body>
-    <!-- icon menus -->
-    <div class="icon-group">
-      <div class="icon">
-        <strong>My Computer</strong>
-      </div>
-      <div class="icon">
-        <strong>My Briefcase</strong>
-      </div>
-      <div class="icon">
-        <strong>My Documents</strong>
-      </div>
-      <div class="icon">
-        <strong>Recycle Bin</strong>
-      </div>
-      <div id="todo" class="icon todo" tabindex="0">
-        <strong>ToDo List</strong>
-      </div>
-      <div id="editor" class="icon editor" tabindex="0">
-        <strong>Text Editor</strong>
-      </div>
-      <div id="paint" class="icon paint" tabindex="0">
-        <strong>Paint</strong>
-      </div>
-    </div>
-    <!-- startup -->
-    <div class="startup">
-      <img
-        src="https://guidebookgallery.org/pics/gui/startupshutdown/splash/win98-1-1.png"
-        alt="Window 98 Startup"
-      />
-    </div>
-
-    <!-- modal -->
-    <section
-      role="dialog"
-      aria-modal="true"
-      aria-hidden="true"
-      class="modal-container"
-    >
-      <div class="window">
-        <div class="title-bar">
-          <div class="title-bar-text" aria-label="Window Modal">Window 98</div>
-          <div class="title-bar-controls">
-            <button aria-label="Minimize"></button>
-            <button aria-label="Maximize"></button>
-            <button aria-label="Close" class="js-close"></button>
-          </div>
-        </div>
-        <div class="window-body">
-          <p>Not supported yet!</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- todos -->
-    <section class="todo-container">
-      <div class="window">
-        <div class="title-bar">
-          <div class="title-bar-text" aria-label="Todo List">ToDo List</div>
-          <div class="title-bar-controls">
-            <button aria-label="Minimize"></button>
-            <button aria-label="Maximize"></button>
-            <button aria-label="Close" class="js-close_todo"></button>
-          </div>
-        </div>
-        <div class="window-body">
-          <div class="field-row todo-input-container">
-            <label for="todo-input">Todo</label>
-            <input type="text" id="todo-input" />
-          </div>
-          <ul class="todo-lists">
-            <li class="field-row todo-list todo-example">
-              <input type="checkbox" id="todo" />
-              <label for="todo">(ex) Write down Todos</label>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- text editor -->
-    <section class="editor-container">
-      <div class="window editor-app">
-        <div class="title-bar">
-          <div class="title-bar-text" aria-label="Text Editor">
-            Script - WordPad
-          </div>
-          <div class="title-bar-controls">
-            <button aria-label="Minimize"></button>
-            <button aria-label="Maximize"></button>
-            <button aria-label="Close" class="js-close_editor"></button>
-          </div>
-        </div>
-        <div class="window-body">
-          <ul class="lists header-menu">
-            <li>File</li>
-            <li>Edit</li>
-            <li>View</li>
-            <li>Insert</li>
-            <li>Format</li>
-            <li>Help</li>
-          </ul>
-          <hr />
-          <ul class="lists editor-menu">
-            <div class="button-group">
-              <select data-cmd="fontName">
-                <option value="Arial">Arial</option>
-                <option value="Courier">Courier</option>
-                <option value="Georgia">Georgia</option>
-                <option value="Tahoma">Tahoma</option>
-                <option value="Verdana">Verdana</option>
-                <option value="Helvetica Neue">Helvetica Neue</option>
-                <option value="Times New Roman">Times New Roman</option>
-              </select>
-            </div>
-            <div class="button-group">
-              <select data-cmd="fontSize">
-                <option value="1">h1</option>
-                <option value="2">h2</option>
-                <option value="3">h3</option>
-                <option value="4">h4</option>
-                <option value="5">h5</option>
-                <option value="6">h6</option>
-                <option value="7">h7</option>
-              </select>
-            </div>
-            <div class="button-group">
-              <button aria-label="bold" data-cmd="bold">
-                <i class="fas fa-bold"></i>
-              </button>
-              <button aria-label="italic" data-cmd="italic">
-                <i class="fas fa-italic"></i>
-              </button>
-              <button aria-label="underline" data-cmd="underline">
-                <i class="fas fa-underline"></i>
-              </button>
-              <button aria-label="strikeThrough" data-cmd="strikeThrough">
-                <i class="fas fa-strikethrough"></i>
-              </button>
-            </div>
-            <div class="button-group">
-              <button aria-label="align left" data-cmd="justifyLeft">
-                <i class="fas fa-align-left"></i>
-              </button>
-              <button aria-label="align center" data-cmd="justifyCenter">
-                <i class="fas fa-align-center"></i>
-              </button>
-              <button aria-label="align right" data-cmd="justifyRight">
-                <i class="fas fa-align-right"></i>
-              </button>
-            </div>
-          </ul>
-          <hr />
-          <iframe id="text-field"></iframe>
-        </div>
-      </div>
-    </section>
-
-    <!-- paint -->
-    <section class="paint-container-new">
-      <div class="window paint-app-new">
-        <div class="title-bar">
-          <div class="title-bar-text" aria-label="Paint">Paint</div>
-          <div class="title-bar-controls">
-            <button aria-label="Minimize"></button>
-            <button aria-label="Maximize"></button>
-            <button aria-label="Close" class="js-close_paint"></button>
-          </div>
-        </div>
-        <div class="window-body-new"></div>
-      </div>
-    </section>
-
-    <!-- <section class="paint-container">
-      <div class="window paint-app">
-        <div class="title-bar">
-          <div class="title-bar-text" aria-label="Paint">Paint</div>
-          <div class="title-bar-controls">
-            <button aria-label="Minimize"></button>
-            <button aria-label="Maximize"></button>
-            <button aria-label="Close" class="js-close_paint"></button>
-          </div>
-        </div>
-        <div class="window-body">
-          <ul class="lists header-menu">
-            <li>File</li>
-            <li>Edit</li>
-            <li>View</li>
-            <li>Image</li>
-            <li>Options</li>
-            <li>Help</li>
-          </ul>
-          <hr />
-          <div class="field-row">
-            <div id="paint-tools" class="tools" aria-label="Paint Tools">
-              <button aria-label="save" class="tool save"></button>
-              <button aria-label="open" class="tool open"></button>
-              <button aria-label="share" class="tool share"></button>
-              <button aria-label="brush" class="tool brush"></button>
-              <button aria-label="line" class="tool line" name="line"></button>
-              <button aria-label="pencil" class="tool pencil"></button>
-              <button
-                aria-label="eraser"
-                class="tool eraser"
-                name="eraser"
-              ></button>
-              <button aria-label="rectangle" class="tool rectangle"></button>
-              <button aria-label="circle" class="tool circle"></button>
-              <button aria-label="refresh" class="tool refresh"></button>
-            </div>
-            <canvas
-              id="paint-canvas"
-              class="canvas"
-              aria-label="Paint Canvas"
-            ></canvas>
-          </div>
-          <div
-            id="paint-colors"
-            class="field-row colors"
-            aria-label="Paint Colors"
-          >
-            <span class="color" aria-label="black"></span>
-            <span class="color" aria-label="dark grey"></span>
-            <span class="color" aria-label="dark red"></span>
-            <span class="color" aria-label="olive"></span>
-            <span class="color" aria-label="green"></span>
-            <span class="color" aria-label="green blue"></span>
-            <span class="color" aria-label="navy"></span>
-            <span class="color" aria-label="purple"></span>
-          </div>
-          <div id="paint-colors" class="field-row colors">
-            <span class="color" aria-label="white"></span>
-            <span class="color" aria-label="light grey"></span>
-            <span class="color" aria-label="red"></span>
-            <span class="color" aria-label="yellow"></span>
-            <span class="color" aria-label="light green"></span>
-            <span class="color" aria-label="light blue"></span>
-            <span class="color" aria-label="blue"></span>
-            <span class="color" aria-label="pink"></span>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- taskbar -->
-    <div id="taskbar">
-      <button>
-        <div>Start</div>
-      </button>
-      <button>
-        <div>Welcome to Windows 98</div>
-      </button>
-      <div class="taskbar-running-app"></div>
-      <!-- clock -->
-      <button id="date-time">
-        <div class="js-clock">
-          <h1 aria-label="Date Time Clock"></h1>
-        </div>
-      </button>
-    </div>
-
-    <script src="./index.js"></script>
-    <script src="./script/clock.js"></script>
-    <script src="./script/modal.js"></script>
-    <script src="./script/todo.js"></script>
-    <script src="./script/texteditor.js"></script>
-    <!-- <script src="./script/paint.js"></script> -->
-    <script src="./script/paint-new.js"></script>
-    <script src="./script/paint-tools.js"></script>
+    <div id="root"></div>
+    <script src="./src/App.js" type="module"></script>
   </body>
 </html>
