💄 Add font-awesome

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="shortcut icon" href="./assets/windows.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
     <link rel="stylesheet" href="./style/index.css" />
-    <!-- <link rel="stylesheet" href="./style/todo.css" /> -->
+    <link rel="stylesheet" href="./style/todo.css" />
+    <link rel="stylesheet" href="./style/texteditor.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="root"></div>
