♻️ Change entry point

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./assets/windows.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://unpkg.com/98.css" />
     <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="./style/icons.css" />
     <link rel="stylesheet" href="./style/todo.css" />
     <link rel="stylesheet" href="./style/texteditor.css" />
     <link
@@ -19,6 +20,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./src/App.js" type="module"></script>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
