--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div id="root"></div>
-    <script src="./src/index.js" type="module"></script>
+    <div id="app"></div>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
